# CLIPer

./: .gitignore  Dockerfile  api.py  caption.py  clip.py  compose.yaml  db.py  main.py  milvus.py  oberver.py  pyproject.toml  requirements.txt  supabase.py  sync_engine.py  sync_fit.py  thumb.py
.fashionxai/: db.json
